CSS Card Grid Updates

--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard/Dashboard.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard/Dashboard.razor
@@ -23,11 +23,11 @@
                         <LeaderboardsTile />
                     </div>
 
-                    <div class="col-lg-6 mb-4">
+                    <div class="col-lg-6">
                         <MyLeaguesTile />
                     </div>
 
-                    <div class="col-lg-6 mb-4">
+                    <div class="col-lg-6">
                         <AvailableLeaguesTile />
                     </div>
                 </div>
