--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/Dashboard.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/Dashboard.razor
@@ -26,20 +26,20 @@
                 <div class="col-12 mb-4">
                     <RoundResultsTile LeagueId="LeagueId" />
                 </div>
-
-                <div class="col-md-4 mb-4">
+  
+                <div class="col-lg-4 mb-4 d-flex">
                     <OverallLeaderboardTile LeagueId="LeagueId" />
                 </div>
 
-                <div class="col-md-4 mb-4">
+                <div class="col-lg-4 mb-4 d-flex">
                     <MonthlyLeaderboardTile LeagueId="LeagueId" />
                 </div>
 
-                <div class="col-md-4 mb-4">
+                <div class="col-lg-4 mb-4 d-flex">
                     <ExactScoresLeaderboardTile LeagueId="LeagueId" />
                 </div>
-
-                <div class="col-12 mb-4">
+     
+                <div class="col-12">
                     <div class="card">
                         <h5 class="text-white">Winnings (Coming Soon)</h5>
                     </div>
