--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/ExactScoresLeaderboardTile.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/ExactScoresLeaderboardTile.razor
@@ -3,7 +3,7 @@
 @using PredictionLeague.Contracts.Leaderboards
 @using PredictionLeague.Web.Client.Services.Leagues
 
-<div class="card">
+<div class="card w-100">
     <h5 class="card-title text-white fw-bold mb-3">Exact Scores</h5>
     <div class="card-body no-padding">
         <ApiError Message="@_errorMessage" />
