Update Team Names to Bold and Width to 100% on Dashboards

--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/pages/results-grid.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/pages/results-grid.css
@@ -32,6 +32,7 @@
         position: sticky;
         left: 0;
         background-color: var(--pl-purple-900);
+        font-weight: bold;
     }
 
     .results-grid thead .match-info,
