--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/OverallLeaderboardTile.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/OverallLeaderboardTile.razor
@@ -27,7 +27,7 @@
                     <thead>
                         <tr>
                             <th class="rank-col">#</th>
-                            <th class="player-name-col">Name</th>
+                            <th class="player-name-col">Player</th>
                             <th class="points-col">Pts</th>
                         </tr>
                     </thead>
