--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard/Dashboard.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard/Dashboard.razor
@@ -15,20 +15,26 @@
         <div class="page-container">
             <div class="dashboard-container">
                 <div class="row align-items-stretch">
-                    <div class="col-lg-8 mb-4">
-                        <UpcomingRoundsTile />
+                    <div class="col-lg-8">
+                        <div class="row">
+                            <div class="col-lg-12 mb-4">
+                                <UpcomingRoundsTile/>
+                            </div>
+                        </div>
+                        
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <MyLeaguesTile/>
+                            </div>
+
+                            <div class="col-lg-6">
+                                <AvailableLeaguesTile/>
+                            </div>
+                        </div>
                     </div>
 
-                    <div class="col-lg-4 mb-4">
-                        <LeaderboardsTile />
-                    </div>
-
-                    <div class="col-lg-6">
-                        <MyLeaguesTile />
-                    </div>
-
-                    <div class="col-lg-6">
-                        <AvailableLeaguesTile />
+                    <div class="col-lg-4">
+                        <LeaderboardsTile/>
                     </div>
                 </div>
             </div>
