Add Winnings to League Dashboard

--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/Dashboard.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/Dashboard.razor
@@ -40,9 +40,7 @@
                 </div>
      
                 <div class="col-12">
-                    <div class="card">
-                        <h5 class="text-white">Winnings (Coming Soon)</h5>
-                    </div>
+                    <WinningsSection LeagueId="LeagueId" />
                 </div>
             </div>
         }
