--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/MonthlyLeaderboardTile.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/MonthlyLeaderboardTile.razor
@@ -6,7 +6,7 @@
 
 <div class="card w-100">
     <h5 class="card-title text-white fw-bold mb-3">Monthly Leaderboard</h5>
-    <div class="card-body no-padding">
+    <div class="card-body no-padding justify-start">
         <ApiError Message="@_errorMessage" />
 
         @if (_isLoadingMonths)
