--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/OverallLeaderboardTile.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/OverallLeaderboardTile.razor
@@ -5,7 +5,7 @@
 
 <div class="card w-100">
     <h5 class="card-title text-white fw-bold mb-3">Overall Leaderboard</h5>
-    <div class="card-body no-padding">
+    <div class="card-body no-padding justify-start">
         @if (_isLoading)
         {
             <div class="d-flex justify-content-center align-items-center h-100">
