--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/layout/layout.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/layout/layout.css
@@ -32,6 +32,51 @@
     border-radius: var(--bs-border-radius);
 }
 
+.w-15 {
+    width: 15%;
+}
+
+.w-20 {
+    width: 20%;
+}
+
+.w-25 {
+    width: 25%;
+}
+
+.w-30 {
+    width: 30%;
+}
+
+.w-35 {
+    width: 35%;
+}
+
+.w-40 {
+    width: 40%;
+}
+
+.w-45 {
+    width: 45%;
+}
+
+.w-50 {
+    width: 50%;
+}
+
+.w-60 {
+    width: 60%;
+}
+
+.mh-600{
+    max-height: 600px;
+}
+
+.break-word {
+    white-space: normal !important;
+    word-wrap: break-word;
+}
+
 @media (max-width: 768px) {
     .page-container {
         padding: 1em;
@@ -44,7 +89,7 @@
         width: 100%;
     }
 
-    dd{
+    dd {
         font-size: 0.8em;
     }
 }
