Small Styling Issues

--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/RoundResultsTile.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/RoundResultsTile.razor
@@ -58,7 +58,7 @@
                     </div>
                 </div>
 
-                <div class="leaderboard-card mt-4">
+                <div class="leaderboard-card mt-4 mh-600">
                     <div class="card-header w-100">
                         <h6 class="card-title text-white fw-bold mb-0 text-center">Round @(State.ViewableRounds.FirstOrDefault(r => r.Id == State.SelectedRoundId)?.RoundNumber) Points</h6>
                     </div>
