--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/MonthlyLeaderboardTile.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/MonthlyLeaderboardTile.razor
@@ -4,7 +4,7 @@
 @using PredictionLeague.Contracts.Leagues
 @using PredictionLeague.Web.Client.Services.Leagues
 
-<div class="card w-100">
+<div class="card w-100 mh-600">
     <h5 class="card-title text-white fw-bold mb-3">Monthly Leaderboard</h5>
     <div class="card-body no-padding justify-start">
         <ApiError Message="@_errorMessage" />
