--- a/PredictionLeague.Web/PredictionLeague.Web.Client/_Imports.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/_Imports.razor
@@ -10,5 +10,6 @@
 @using PredictionLeague.Web.Client
 @using PredictionLeague.Web.Client.Authentication
 @using PredictionLeague.Web.Client.Components.Shared
+@using PredictionLeague.Web.Client.Utilities
 @using System.Net.Http
 @using System.Net.Http.Json
