--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/PredictionStatusBadge.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/PredictionStatusBadge.razor
@@ -27,7 +27,7 @@
         0 => "badge-group--red",
         3 => "badge-group--yellow",
         5 => "badge-group--green",
-        _ => ""
+        _ => "badge-group--blue"
     };
 
     private string IconClass => PointsAwarded switch
